--- a/public/project_dandelion/style.css
+++ b/public/project_dandelion/style.css
@@ -1,263 +1,297 @@
+/** @format */
+
 @font-face {
-  /* font designed by Alan Dague-Greene */
-  font-family: courier;
-  src: url(/fonts/CourierPrime-Regular.ttf);
+	/* font designed by Alan Dague-Greene */
+	font-family: courier;
+	src: url(/fonts/CourierPrime-Regular.ttf);
 }
 
 @font-face {
-  /* font designed by Emre Parlak */
-  font-family: major;
-  src: url(/fonts/MajorMonoDisplay-Regular.ttf);
+	/* font designed by Emre Parlak */
+	font-family: major;
+	src: url(/fonts/MajorMonoDisplay-Regular.ttf);
 }
 
 /* REGULAR TEXT */
 * {
-  font-family: courier;
-  font-weight: bold;
-  box-sizing: border-box;
+	font-family: courier;
+	font-weight: bold;
+	box-sizing: border-box;
 }
 
 body {
-  margin: 0px;
+	margin: 0px;
 }
 
 h1 {
-  color: white;
-  font-family: major;
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 50px;
+	color: white;
+	font-family: major;
+	text-align: center;
+	text-transform: uppercase;
+	font-size: 50px;
 
-  background-image: url(images/garage-rays.jpg);
-  background-size: 100%;
-  background-position-y: center;
+	background-image: url(images/garage-rays.jpg);
+	background-size: 100%;
+	background-position-y: center;
 
-  margin: 0px;
-  padding: 120px;
+	margin: 0px;
+	padding: 120px;
 }
 
 h2 {
-  text-transform: lowercase;
-  text-align: center;
+	text-transform: lowercase;
+	text-align: center;
 
-  margin: 20px 10px;
+	margin: 20px 10px;
 }
 
 p {
-  text-transform: lowercase;
-  text-align: center;
+	text-transform: lowercase;
+	text-align: center;
 
-  margin: 20px 10px;
+	margin: 20px 10px;
 }
 
 /* EMPHASIZED EXPLANATION */
 .explanation-container {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-evenly;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-evenly;
 
-  margin: 20px 0px;
+	margin: 20px 0px;
 }
 
 .explanation-left {
-  text-align: left;
-  width: 50%;
+	text-align: left;
+	width: 50%;
 
-  padding: 0px 10px;
-  margin: 0px 10px;
+	padding: 0px 10px;
+	margin: 0px 10px;
 }
 
 .explanation-right {
-  background-color: #edb16c;
-  text-align: right;
-  /* width: calc(50% - 20px); */
-  width: 10%;
+	background-color: #edb16c;
+	text-align: right;
+	/* width: calc(50% - 20px); */
+	width: 10%;
 
-  padding: 0px 10px;
-  margin: 0px 10px;
+	padding: 0px 10px;
+	margin: 0px 10px;
 }
 
 /* LINKS */
 .link-container {
-  /* format the links with each other */
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: flex-end;
-  background: coral;
+	/* format the links with each other */
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: flex-end;
+	background: coral;
 
-  padding: 5px 0px;
+	padding: 5px 0px;
 }
 
 .link-container > a {
-  /* format the links themselves */
-  text-decoration: none;
-  color: white;
-  text-transform: lowercase;
-  font-size: small;
-  font-family: major;
-  text-align: center;
+	/* format the links themselves */
+	text-decoration: none;
+	color: white;
+	text-transform: lowercase;
+	font-size: small;
+	font-family: major;
+	text-align: center;
 
-  box-sizing: border-box;
-  background: coral;
+	box-sizing: border-box;
+	background: coral;
 
-  margin: 0px 5px;
-  padding: 5px 10px;
+	margin: 0px 5px;
+	padding: 5px 10px;
 }
 
 .link-container > a:hover {
-  background: brown;
+	background: brown;
 }
 
 /* BLOG POST */
 .artist {
-  display: flex;
-  flex-flow: row nowrap;
+	display: flex;
+	flex-flow: row nowrap;
 }
 
 .blog_title {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-between;
-  align-items: start;
+	display: flex;
+	flex-flow: row nowrap;
+	justify-content: space-between;
+	align-items: start;
 }
 
 .blog_title > * {
-  width: calc(100% / 3);
-  text-align: center;
+	width: calc(100% / 3);
+	text-align: center;
 }
 
 .blog_title > h3 {
-  font-size: large;
-  text-align: right;
-  padding: 0px;
-  margin: 0px;
+	font-size: large;
+	text-align: right;
+	padding: 0px;
+	margin: 0px;
 }
 
 .artist > h3 {
-  font-size: large;
-  line-height: 30px;
-  padding: 0px;
-  margin: 0px 0px 0px 15px;
+	font-size: large;
+	line-height: 30px;
+	padding: 0px;
+	margin: 0px 0px 0px 15px;
 }
 
 .blog_title > h2 {
-  font-size: xx-large;
-  padding: 0px;
-  margin: 0px;
+	font-size: xx-large;
+	padding: 0px;
+	margin: 0px;
 }
 
 .blog_post {
-  /* background-color: #edb16c; */
+	/* background-color: #edb16c; */
 
-  margin: 50px 10px;
-  padding: 15px;
+	margin: 50px 10px;
+	padding: 15px;
 }
 
 .blog_post > h2 {
-  text-align: left;
-  margin: 0px;
+	text-align: left;
+	margin: 0px;
 }
 
 .songdescription > p {
-  padding: 10px;
+	padding: 10px;
 }
 
 .songdescription {
-  width: calc(100% - 300px);
+	width: calc(100% - 300px);
 }
 
 .combo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 
-  margin: 10px 0px 0px 0px;
+	margin: 10px 0px 0px 0px;
 }
 
 /* BANDS */
 .band {
-  font-weight: 100;
-  font-family: major;
-  text-align: justify;
-  font-size: 12px;
-  height: 1em;
-  padding: 0px 10px;
-  margin: 30px 0px;
+	font-weight: 100;
+	font-family: major;
+	text-align: justify;
+	text-overflow: clip;
+	font-size: 12px;
+	height: 1em;
+	max-height: 1em;
+	padding: 0px 10px;
+	margin: 30px 0px;
 }
 
 .trickster {
-  width: 100%;
-  height: 1px;
-  display: inline-block;
+	width: 100%;
+	height: 1px;
+	display: inline-block;
+}
+
+.scroll-track {
+	display: inline-block;
+	white-space: nowrap;
+	will-change: transform;
+	position: relative;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
+.scroll-marquee {
+	top: 0;
+	left: 0;
+	width: 100vw;
+	overflow: hidden;
+	white-space: nowrap;
+	background-color: white;
+	z-index: 999;
+}
+
+.scroll-track span {
+	font-weight: 100;
+	font-family: major;
+	font-size: 12px;
+	line-height: 1em;
+	padding: 0px 10px;
+	margin: 5px 0px;
+	display: inline-block;
+	padding-right: 2rem;
 }
 
 /* STAIRCASE HEADERS */
 .staircase {
-  color: coral;
-  margin: 20px 400px;
+	color: coral;
+	margin: 20px 400px;
 }
 
 .stair1 {
-  text-align: left;
+	text-align: left;
 }
 .stair2 {
-  text-align: center;
+	text-align: center;
 }
 .stair3 {
-  text-align: right;
+	text-align: right;
 }
 
 /* SLIDESHOW */
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
+	max-width: 1000px;
+	position: relative;
 }
 
 .prev,
 .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+	cursor: pointer;
+	position: absolute;
+	top: 50%;
+	width: auto;
+	padding: 16px;
+	margin-top: -22px;
+	color: white;
+	font-weight: bold;
+	font-size: 18px;
+	transition: 0.6s ease;
+	border-radius: 0 3px 3px 0;
+	user-select: none;
 }
 
 .prev {
-  left: 0;
-  border-radius: 0 3px 3px 0;
+	left: 0;
+	border-radius: 0 3px 3px 0;
 }
 
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+	right: 0;
+	border-radius: 3px 0 0 3px;
 }
 
 .prev:hover,
 .next:hover {
-  background-color: #f1f1f1;
-  color: black;
+	background-color: #f1f1f1;
+	color: black;
 }
 
 .dots {
-  text-align: center;
+	text-align: center;
 }
 
 .dot {
-  height: 5px;
-  width: 5px;
-  margin: 0px 0px;
-  background-color: coral;
-  border-radius: 50%;
-  display: inline-block;
+	height: 5px;
+	width: 5px;
+	margin: 0px 0px;
+	background-color: coral;
+	border-radius: 50%;
+	display: inline-block;
 }
 
 .dot-active {
-  background-color: white;
+	background-color: white;
 }
